# Final_Project_Python

./: .gitignore  pyproject.toml
src/: main.py  project.code-workspace
src/real_estate_toolkit/agent_based_model/: consumers.py  house.py  house_market.py  market.py  simulation.py
src/real_estate_toolkit/analytics/: exploratory.py
src/real_estate_toolkit/data/: cleaner.py  descriptor.py  loader.py
src/real_estate_toolkit/ml_models/: predictor.py
